--- a/PlacidoG.github.io/html practice/Home.html
+++ b/PlacidoG.github.io/html practice/Home.html
@@ -67,7 +67,7 @@
                 </button>
 
                 <button>
-                    Questions?
+                    Questions & Comments?
                 </button>
             </div>
         </div>
