Flatten site: move assets to /assets, make root index.html primary, add about.html, update paths and data fetch

--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Placido Garay | Portfolio</title>
-  <!-- Use base href so all relative links/scripts/styles point to your existing folder structure -->
-  <base href="PlacidoG.github.io/html%20practice/" />
+  <!-- Flattened structure: assets are now under /assets -->
     
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="Company info/Main_styles.css" />
+  <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
 <body id="top">
@@ -129,7 +128,7 @@
     <div class="container footer-inner">
       <p>© <span id="year"></span> Placido Garay • Houston, TX</p>
                         <nav class="footer-nav">
-                            <a href="Company info/about-history.html">About</a>
+                                                        <a href="about.html">About</a>
                             <a class="with-icon brand-linkedin" href="https://linkedin.com/in/p-g-118569273" target="_blank" rel="noopener" aria-label="LinkedIn">
                               <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M20.447 20.452H16.89v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.94v5.666H9.89V9h3.414v1.561h.049c.476-.9 1.637-1.852 3.37-1.852 3.603 0 4.268 2.372 4.268 5.457v6.286zM5.89 7.433a2.062 2.062 0 11.001-4.124 2.062 2.062 0 01-.001 4.124zM7.552 20.452H4.224V9h3.328v11.452z"/></svg>
                               LinkedIn
@@ -147,7 +146,7 @@
     </div>
   </footer>
 
-  <script src="./Homepage.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 
 </html>
