Hero: add circular GitHub profile avatar and responsive styles

--- a/index.html
+++ b/index.html
@@ -40,13 +40,18 @@
     <!-- Hero Section -->
     <section class="hero">
       <div class="container">
-        <h1 class="hero-title">Building clean, modern, and reliable software.</h1>
-        <p class="hero-subtitle">
-          I'm Placido, a developer focused on crafting performant web experiences and thoughtful UI.
-        </p>
-        <div class="hero-ctas">
-          <a href="#projects" class="btn btn-primary">View Projects</a>
-          <a href="#contact" class="btn btn-ghost">Get in touch</a>
+        <div class="hero-content">
+          <img class="avatar" src="https://github.com/PlacidoG.png?size=240" alt="Placido Garay profile photo" width="120" height="120" loading="eager" />
+          <div class="hero-text">
+            <h1 class="hero-title">Building clean, modern, and reliable software.</h1>
+            <p class="hero-subtitle">
+              I'm Placido, a developer focused on crafting performant web experiences and thoughtful UI.
+            </p>
+            <div class="hero-ctas">
+              <a href="#projects" class="btn btn-primary">View Projects</a>
+              <a href="#contact" class="btn btn-ghost">Get in touch</a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
