Hero avatar: increase size, float right with text wrap, add metallic ring glow and hover

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <section class="hero">
       <div class="container">
         <div class="hero-content">
-          <img class="avatar" src="https://github.com/PlacidoG.png?size=240" alt="Placido Garay profile photo" width="120" height="120" loading="eager" />
           <div class="hero-text">
+            <img class="avatar avatar--float" src="https://github.com/PlacidoG.png?size=240" alt="Placido Garay profile photo" width="180" height="180" loading="eager" />
             <h1 class="hero-title">Building clean, modern, and reliable software.</h1>
             <p class="hero-subtitle">
               I'm Placido, a developer focused on crafting performant web experiences and thoughtful UI.
